<resources>
    <string name="app_name">BazBike</string>
    <string name="title_activity_maps">@string/app_name</string>
    <string name="add_location">Add Location</string>
    <string name="new_location">Tap here to add this location</string>
    <string name="view_profile">View profile</string>
    <string name="settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->
    <string name="pref_header_data">Data</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_data_clear">Clear all location goals</string>
    <string name="pref_data_clear_summary">Removes all added location goals, this does not affect your score.</string>
    <string name="pref_data_clear_key">clearlocation</string>
    <string name="pref_data_clear_confirmtitle">ERASE ALL LOCATION GOALS</string>
    <string name="pref_data_clear_confirmdesc">Are you sure you want to remove all your added location goals? This won\'t affect your acquired points.</string>
    <string name="pref_data_clear_toast">All location goals cleared</string>
    <string name="location_removed">Location goal removed</string>
    <string name="pref_data_remove_locationgoal">Remove location goal</string>
    <string name="pref_data_remove_locationgoal_desc">Are you sure you want to remove this location goal?</string>
    <string name="savedata_prefs">link.diga.bazbike.savedata</string>
    <string name="profile_title">Your profile</string>
    <string name="progress">Progress</string>
    <string name="XP">XP</string>
    <string name="xpPlaceholder">%1$d XP, %2$d to go</string>
    <string name="level">Level</string>
    <string name="levelPlaceholder">Level %1$d</string>
    <string name="distanceTravelled">%1$s km travelled</string>
    <string name="pref_data_clearprogress">CLEAR ALL PROGRESS</string>
    <string name="pref_data_clear_summaryprogress">Clears all earned XP and total distance travelled. Cannot be undone!</string>
    <string name="pref_data_clearprogress_key">clearprogress</string>
    <string name="pref_data_clearprogress_confirmtitle">CLEAR ALL PROGRESS</string>
    <string name="pref_data_clearprogress_confirmdesc">WARNING! This will clear all of your earned XP and your total distance. This cannot be undone!</string>
    <string name="pref_data_clearprogress_toast">Progress cleared!</string>
    <string name="stop_tracking">Stop tracking</string>
    <string name="notification_tracking">Please close the app when finished to preserve battery!</string>

</resources>
